Adjust HTML header

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -153,6 +153,7 @@
   <msg key="metaAuthors">Überblick über die Autoren, deren Texte in der Quellenedition und die weiterhin durch biographische Artikel beschrieben sind.</msg>
   <msg key="metaDictionary">Überblick über die im Projekt erarbeiteten Sachartikel des Wörterbuchs der juridisch-politischen Sprache der Schule von Salamanca</msg>
   <msg key="metaWPs">Überblick über die Working Papers zur Schule von Salamanca, die im Rahmen der vom Projekt veranstalteten Reihe erschienen sind.</msg>
+  <msg key="metaParticipants">Überblick über die am Projekt "Die Schule von Salamanca" beteiligten Personen.</msg>
   
   <!-- dictionary -->
   <msg key="dictUnderConstruction">Hier entsteht das Wörterbuch der juristisch-politischen Sprache der Schule von Salamanca: ca. 200 Artikel mit lateinischen und spanischen Lemmata, den Quellen selbst entnommen. 
