--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -43,6 +43,7 @@
     <msg key="metaAuthors">Überblick über die Autoren, deren Texte in der Quellenedition und die weiterhin durch biographische Artikel beschrieben sind.</msg>
     <msg key="metaDictionary">Überblick über die im Projekt erarbeiteten Sachartikel des Wörterbuchs der juridisch-politischen Sprache der Schule von Salamanca</msg>
     <msg key="metaWPs">Überblick über die Working Papers zur Schule von Salamanca, die im Rahmen der vom Projekt veranstalteten Reihe erschienen sind.</msg>
+    <msg key="metaParticipants">Überblick über die am Projekt "Die Schule von Salamanca" beteiligten Personen.</msg>
     
     <!-- index -->
     <msg key="introSearch">Búsqueda de texto completo en 116 obras, en el diccionario, en los artículos biográficos y en los Working Papers.</msg>
