--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -27,23 +27,23 @@
     <msg key="getAnswers">Cómo llegar hasta nosotros</msg>
     
     <!-- Meta Description Tags -->
-    <msg key="metaAuthor">Biobibliographische Informationen über</msg>
-    <msg key="metaLemma">Sachartikel zu</msg>
+    <msg key="metaAuthor">Información bibliográfica sobre</msg>
+    <msg key="metaLemma">Artículo científico acerca de</msg>
     <msg key="metaWP">SvSal Working Paper</msg>
-    <msg key="metaWork">Leseansicht von</msg>
-    <msg key="metaWorkDetails">Bibliographische Daten zu</msg>
-    <msg key="metaIndex">Eine Sammlung digitaler Quellen und ein Wörterbuch der juridisch-politischen Diskurse von iberischen Theologen, Juristen und Philosophen der Frühen Neuzeit.</msg>
-    <msg key="metaSearch">Suche in Texten der Salmanticenser Autoren, in Wörterbuch- und biographischen Artikeln sowie in Working Papers über die Schule von Salamanca.</msg>
-    <msg key="metaContact">Möglichkeiten, das Projekt "Die Schule von Salamanca" zu kontaktieren und über Neuigkeiten auf dem Laufenden zu bleiben.</msg>
-    <msg key="metaEditorial">Richtlinien und Vorgaben für die Einreichung von Vorschlägen für die Working Paper Reihe des Projekts "Die Schule von Salamanca".</msg>
-    <msg key="metaGuidelines">Editionsrichtlinien der Erstellung der digitalen Quellenedition des Projekts "Die Schule von Salamanca".</msg>
-    <msg key="metaProject">Allgemeine Informationen über das Projekt "Die Schule von Salamanca. Eine digitale Quellenedition und ein Wörterbuch ihrer juridisch-politischen Sprache".</msg>
-    <msg key="metaNews">Neuigkeiten, Ankündigungen und kurze Blog-Texte des Projekts "Die Schule von Salamanca" über Theorie, Methodologie, Technik und Weiteres.</msg>
-    <msg key="metaWorks">Überblick über die Quellen, die im Rahmen der digitalen Quellenedition in Text und Bild verfügbar sind. Filter- und Sortierbar.</msg>
-    <msg key="metaAuthors">Überblick über die Autoren, deren Texte in der Quellenedition und die weiterhin durch biographische Artikel beschrieben sind.</msg>
-    <msg key="metaDictionary">Überblick über die im Projekt erarbeiteten Sachartikel des Wörterbuchs der juridisch-politischen Sprache der Schule von Salamanca</msg>
-    <msg key="metaWPs">Überblick über die Working Papers zur Schule von Salamanca, die im Rahmen der vom Projekt veranstalteten Reihe erschienen sind.</msg>
-    <msg key="metaParticipants">Überblick über die am Projekt "Die Schule von Salamanca" beteiligten Personen.</msg>
+    <msg key="metaWork">Vista de lectura de</msg>
+    <msg key="metaWorkDetails">Datos bibliográficos de</msg>
+    <msg key="metaIndex">Una Colección Digital de Fuentes y un Diccionario de su Lenguaje Jurídico-Político de Teólogos, Juristas y Filósofos ibericos de la temprana edad moderna.</msg>
+    <msg key="metaSearch">Buscar en los textos de los autores salamantinos, en articulos bibliográficos y del diccionario, como también en los Working Papers sobre la escuela de Salamanca.</msg>
+    <msg key="metaContact">Posibilidades para contactar el proyecto "La Escuela de Salamanca" y quedarse en la últimas noticias.</msg>
+    <msg key="metaEditorial"> Directrices y especificaciones para la presentación de propuestas para la serie de Working Papers del proyecto "La Escuela de Salamanca".</msg>
+    <msg key="metaGuidelines">Directrices de edición para la producción de la edición digital de fuentes del proyecto "La Escuela de Salamanca".</msg>
+    <msg key="metaProject">Información general acerca del proyecto "La Escuela de Salamanca. Una Colección Digital de Fuentes y un Diccionario de su Lenguaje Jurídico-Político".</msg>
+    <msg key="metaNews">Noticias, anuncios y textos cortos del blog del proyecto "La Escuela de Salamanca" acerca de la teoria, metodología, tecnica y otros.</msg>
+    <msg key="metaWorks">Resumen de las fuentes que, estan disponibles en el marco de la edición digital de fuentes. Filtrable y clasificable.</msg>
+    <msg key="metaAuthors">Resumen de los autores, cuyos textos están descritos en la edición de fuentes y con mas detalle en artículos bibliográficos</msg>
+    <msg key="metaDictionary">Resumen de los artículos del diccionario del lenguaje jurídico-político de la Escuela de Salamanca desarrollados durante el proyecto.</msg>
+    <msg key="metaWPs">Resumen acerca de los Working Papers acerca de la Escuela de Salamanca publicados en el marco de la serie organizada por el proyecto.</msg>
+    <msg key="metaParticipants">Resumen acerca de las personas involucaradas en el proyecto "La Escuela de Salamanca".</msg>
     
     <!-- index -->
     <msg key="introSearch">Búsqueda de texto completo en 116 obras, en el diccionario, en los artículos biográficos y en los Working Papers.</msg>
@@ -372,6 +372,12 @@
     <msg key="projectTeam">Equipo del Proyecto</msg>
     <msg key="projectAdvBoard">Consejo Científico</msg>
     <msg key="projectCooperators">Partenariados</msg>
+    <msg key="projectFormer">Empleados antiguos</msg>
+    <msg key="phoneAbbr">tel.</msg>
+    <msg key="email">Correo electrónico</msg>
+    <msg key="cv">Curriculum Vitae</msg>
+    <msg key="researchInterests">Intereses investigativos </msg>
+    <msg key="selectedPublications">Publicaciones (selección)</msg>
   
     <!-- general language abbreviations, conjunctions, phrases, etc. -->
     <msg key="inLow">en</msg>
