Include pages for advisory board, cooperators, and former members

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -203,6 +203,7 @@
   <msg key="projectCooperators">Kooperationspartner</msg>
   <msg key="projectFormer">Ehemalige Mitarbeitende</msg>
   <msg key="phoneAbbr">Tel.</msg>
+  <msg key="faxAbbr">Fax</msg>
   <msg key="email">E-Mail</msg>
   <msg key="cv">Curriculum Vitae</msg>
   <msg key="researchInterests">Forschungsinteressen</msg>
