--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -366,6 +366,7 @@
   <msg key="projectCooperators">Co-operation Partners</msg>
   <msg key="projectFormer">Former Team Members</msg>
   <msg key="phoneAbbr">Tel.</msg>
+  <msg key="faxAbbr">Fax</msg>
   <msg key="email">Email</msg>
   <msg key="cv">Curriculum Vitae</msg>
   <msg key="researchInterests">Research Interests</msg>
