--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -374,6 +374,7 @@
     <msg key="projectCooperators">Partenariados</msg>
     <msg key="projectFormer">Empleados antiguos</msg>
     <msg key="phoneAbbr">tel.</msg>
+    <msg key="faxAbbr">Fax</msg>
     <msg key="email">Correo electrónico</msg>
     <msg key="cv">Curriculum Vitae</msg>
     <msg key="researchInterests">Intereses investigativos </msg>
