--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -208,6 +208,7 @@
   <msg key="cv">Zur Person</msg>
   <msg key="researchInterests">Forschungsinteressen</msg>
   <msg key="selectedPublications">Publikationen (Auswahl)</msg>
+  <msg key="toOverview">Zur Übersicht über die Projektbeteiligten</msg>
   
   <!-- general language abbreviations, conjunctions, phrases, etc. -->
   <msg key="inLow">in</msg>
