--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -379,6 +379,7 @@
     <msg key="cv">Curriculum Vitae</msg>
     <msg key="researchInterests">Intereses investigativos </msg>
     <msg key="selectedPublications">Publicaciones (selección)</msg>
+    <msg key="toOverview">Resumen del equipo del proyecto y de sus consultantes</msg>
   
     <!-- general language abbreviations, conjunctions, phrases, etc. -->
     <msg key="inLow">en</msg>
