--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -81,7 +81,7 @@
   <msg key="guidelinesDecl">Description of the edition principles and the encoding of the texts.</msg>
   <msg key="wpCreateDecl">Submit a Working Paper.</msg>
   <msg key="team">Project Team</msg>
-  <msg key="teamDesc">Profiles of the project team on the website of the Academy of Sciences and Literature, Mainz.</msg>
+  <msg key="teamDesc">Profiles of the project team, cooperations, advisory board.</msg>
   <msg key="getInvolved">Contribute</msg>
   <msg key="happyness">Thank you for your interest. If you have any questions regarding our project, please contact us at:</msg>
   <msg key="sourceCode">Source Code</msg>
@@ -359,6 +359,7 @@
   <msg key="listOfSources">List of all sources</msg>
   
   <!-- project participants -->
+  <msg key="participantsTitle">Project Team and Consultants</msg>
   <msg key="projectTeamConsultants">Project Team and Consultants</msg>
   <msg key="projectDirectors">Project Directors</msg>
   <msg key="projectTeam">Project Team</msg>
