Align toolbox items vertically, and enrich items with text labels

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -69,11 +69,15 @@
   <msg key="accessedDate">Aufgerufen am</msg>
   <msg key="ebook">E-Book</msg>
   <msg key="openToolbox">Toolbox für diesen Textabschnitt öffnen</msg>
-  <msg key="citePass">Diesen Abschnitt zitieren</msg>
-  <msg key="linkPass">Diesen Textabschnitt aufrufen / verlinken</msg>
+  <msg key="citePass">Zitierhinweis für diesen Abschnitt kopieren</msg>
+  <msg key="linkPass">Link für diesen Abschnitt kopieren</msg>
   <msg key="teiExpPass">TEI für diesen Abschnitt exportieren</msg>
   <msg key="txtExpPass">Plain Text für diesen Abschnitt exportieren</msg>
   <msg key="txtExp">Plain Text exportieren</msg>
+  <msg key="copyLink">Link kopieren</msg>
+  <msg key="copyCit">Zitierhinweis kopieren</msg>
+  <msg key="txtExpShort">TXT exportieren</msg>
+  <msg key="teiExpShort">TEI exportieren</msg>
   
   <!-- errors -->
   <msg key="authorNotYetAvailable">Dieser Artikel ist noch nicht verfügbar.</msg>
