--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -322,11 +322,15 @@
     <msg key="accessedDate">Consultado por última vez el</msg>
     <msg key="ebook">Libro electrónico</msg>
     <msg key="openToolbox">Abrir caja de herramientas para este pasaje</msg>
-    <msg key="citePass">Citar este pasaje</msg>
-    <msg key="linkPass">Ir a / enlazar este pasaje</msg>
-    <msg key="teiExpPass">Descargar TEI para este pasaje</msg>
+    <msg key="citePass">Copiar modelo de citación recomendado para este pasaje</msg>
+    <msg key="linkPass">Copiar enlace de este pasaje</msg>
+    <msg key="teiExpPass">Descargar TEI/XML para este pasaje</msg>
     <msg key="txtExpPass">Descargar texto puro para este pasaje</msg>
     <msg key="txtExp">Descargar texto simple</msg>
+    <msg key="copyLink">Copiar enlace</msg>
+    <msg key="copyCit">Copiar citación</msg>
+    <msg key="txtExpShort">Descargar TXT</msg>
+    <msg key="teiExpShort">Descargar TEI</msg>
     
     <!--news-->
     <msg key="more">más</msg>
