--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -22,7 +22,7 @@
   <msg key="contact">Contact</msg>
   <msg key="about">About the Project</msg>
   <msg key="WpAbout">Submit a Working Paper</msg>
-  <msg key="WpIntro">The interdisciplinary Salamanca Working Papers Series offers philosophical, legal, and theological articles related to the School of Salamanca. The series reflects the research done in the project, but also accepts contributions from other scholars. Submitted articles are subject to a double blind peer review. To submit a proposal, please contact us at</msg>
+  <msg key="WpIntro">The interdisciplinary Salamanca Working Papers Series offers philosophical, legal, and theological articles related to the School of Salamanca. The series reflects the research done in the project, but also accepts contributions from other scholars. Submitted articles are subject to a peer review. To submit a proposal, please contact us at</msg>
   <msg key="WpGuidelinesDelayed">Further information for authors is forthcoming.</msg>
   <msg key="WpIntroTitle">Salamanca Working Papers Series (ISSN 2509-5080)</msg>
   <msg key="getAnswers">Get in contact</msg>
