--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -21,7 +21,7 @@
     <msg key="guidelines">Directrices de Edición</msg>
     <msg key="contact">Contacto</msg>
     <msg key="about">Descripción del proyecto</msg>
-    <msg key="WpIntro">La serie de Working Papers de Salamanca es una colección interdisciplinar de artículos que abordan temas filosóficos, jurídicos y teológicos relacionados con la Escuela de Salamanca. Esta colección refleja tanto la investigación hecha en el proyecto, como las contribuciones realizadas por otros investigadores. Cada propuesta pasa por un proceso de revisión anónima por pares. Si desea enviar un artículo, por favor contáctenos en</msg>
+    <msg key="WpIntro">La serie de Working Papers de Salamanca es una colección interdisciplinar de artículos que abordan temas filosóficos, jurídicos y teológicos relacionados con la Escuela de Salamanca. Esta colección refleja tanto la investigación hecha en el proyecto, como las contribuciones realizadas por otros investigadores. Cada propuesta pasa por un proceso de revisión por pares. Si desea enviar un artículo, por favor contáctenos en</msg>
     <msg key="WpIntroTitle">Salamanca Working Papers Series (ISSN 2509-5080)</msg>
     <msg key="WpGuidelinesDelayed">Próximamente habrá más información en línea para autores.</msg>
     <msg key="getAnswers">Cómo llegar hasta nosotros</msg>
