--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -406,6 +406,7 @@
     <msg key="copy">Copiar</msg>
     
     <!-- div, milestone, element types for node index derivatives -->
+    <msg key="tei-div-additional">Adenda</msg>
     <msg key="tei-div-administrative">Administrativo</msg>
     <msg key="tei-div-article">Artículo</msg>
     <msg key="tei-div-book">Libro</msg>
