Differentiate work editors in cat records (addresses #31)

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -105,7 +105,8 @@
   <msg key="worksNotice3">, die sukzessive auf dieser Seite zur Verfügung gestellt werden. 
     Hierfür werden die Texte den Spezifikationen der Text Encoding Initiative (TEI) entsprechend aufbereitet;
     für nähere Informationen siehe die </msg>
-  <msg key="alphaEditors">Herausgeber (in alphabetischer Reihenfolge)</msg>
+  <msg key="techEditors">Technische Redaktion</msg>
+  <msg key="scholEditors">Fachwissenschaftliche Redaktion</msg>
   <msg key="editors">Herausgeber</msg>
   <msg key="series">Reihe</msg>
   <msg key="editionSeries">Die Schule von Salamanca. Eine Digitale Quellensammlung</msg>
