--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -135,10 +135,27 @@
   <msg key="ownerMaster">Digital master</msg>
   <msg key="sort">Sort</msg>
   <!--<msg key="next">Next</msg>-->
-  <msg key="downloadCorpusTitle">Download the complete corpus</msg>
+  <msg key="downloadCorpusTitle">Download the full corpus</msg>
   <msg key="txtFiles">Plain text (TXT)</msg>
   <msg key="teiFiles">TEI XML</msg>
   <msg key="proposedCitation">Proposed citation</msg>
+  
+  <!-- stats -->
+  <msg key="aboutCorpus">About the Corpus</msg>
+  <msg key="editFacsLow">digitally edited print pages</msg>
+  <msg key="editFacsUp">Digitally Edited Print Pages</msg>
+  <msg key="digiFacsLow">digitized facsimiles</msg>
+  <msg key="digiFacsUp">Digitized Facsimiles</msg>
+  <msg key="tokensLow">tokens</msg>
+  <msg key="tokensUp">Tokens</msg>
+  <msg key="wordFormsLow">word forms</msg>
+  <msg key="wordFormsUp">Word Forms</msg>
+  <msg key="addStats">More statistics</msg>
+  <msg key="tokensDesc">Tokens are strings of characters in a text, such as word forms, interpunctuation, or structural symbols</msg>
+  <msg key="wordformsDesc">Word forms are strings of characters that are interpretable as words</msg>
+  <msg key="typesDesc">Word types are word forms that are unique in the corpus</msg>
+  
+  <msg key="corpusStats">Corpus Statistics</msg>
   
   
   <msg key="worksNotice1">The digital collection of sources of the project "The School of Salamanca" comprises </msg>
