--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -147,24 +147,28 @@
     <msg key="proposedCitation">Modelo de citación recomendado</msg>
     
     <!-- stats -->
+    <msg key="stats">Estadísticas</msg>
     <msg key="aboutCorpus">Información del corpus</msg>
     <msg key="editFacsLow">páginas imprimidas editadas</msg>
     <msg key="editFacsUp">Páginas imprimidas editadas</msg>
     <msg key="digiFacsLow">facsímiles digitalizadas</msg>
     <msg key="digiFacsUp">Facsímiles digitalizadas</msg>
+    <msg key="charsUp">Caracteres</msg> <!-- TODO -->
     <msg key="tokensLow">tokens</msg>
     <msg key="tokensUp">Tokens</msg>
+    <msg key="wordsLow">palabras</msg>
+    <msg key="wordsUp">Palabras</msg>
     <msg key="wordFormsLow">formas de palabra</msg>
     <msg key="wordFormsUp">Formas de palabra</msg>
     <msg key="addStats">Más estadísticas</msg>
     <!-- TODO - descriptions:-->
     <msg key="tokensDesc">Tokens are strings of characters in a text, such as word forms, interpunctuation, or structural symbols</msg>
-    <msg key="wordformsDesc">Word forms are strings of characters that are interpretable as words</msg>
-    <msg key="typesDesc">Word types are word forms that are unique in the corpus</msg>
+    <msg key="wordformsDesc">Word forms represent the set of unique words (i.e., tokens that are interpretable as words) in the corpus</msg> <!-- TODO -->
     
-    <!-- TODO: -->
     <msg key="corpusStats">Estadísticas del Corpus</msg>
-    
+    <msg key="editInterv">Intervenciones editoriales</msg>
+    <msg key="editAbbr">Abreviaciones expandidas</msg> <!-- TODO -->
+    <msg key="editSic">Errata de impresión corregidos</msg>
     
     <msg key="worksNotice1">La colección digital de fuentes del proyecto "La Escuela de Salamanca" 
         incluye </msg>
