--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -154,21 +154,27 @@
   <msg key="extent">Umfang, Format</msg>
   
   <!-- stats -->
+  <msg key="stats">Statistiken</msg>
   <msg key="aboutCorpus">Über das Corpus</msg>
   <msg key="editFacsLow">digital edierte Druckseiten</msg>
   <msg key="editFacsUp">Digital edierte Druckseiten</msg>
   <msg key="digiFacsLow">digitalisierte Faksimiles</msg>
   <msg key="digiFacsUp">Digitalisierte Faksimiles</msg>
+  <msg key="charsUp">Zeichen</msg>
   <msg key="tokensLow">Tokens</msg>
   <msg key="tokensUp">Tokens</msg>
+  <msg key="wordsLow">Wörter</msg>
+  <msg key="wordsUp">Wörter</msg>
   <msg key="wordFormsLow">Wortformen</msg>
   <msg key="wordFormsUp">Wortformen</msg>
   <msg key="addStats">Weitere Zahlen</msg>
-  <msg key="tokensDesc">Tokens sind Zeichenketten in einem Text, wie z.B. Wortformen, Interpunktion, Gliederungszeichen und andere Symbole</msg>
-  <msg key="wordformsDesc">Wortformen sind Zeichenketten/Tokens, die als Wörter interpretierbar sind</msg>
-  <msg key="typesDesc">Worttypen sind im Corpus einzigartige Wortformen</msg>
+  <msg key="tokensDesc">Tokens sind Zeichenketten in einem Text, wie z.B. Wörter, Interpunktion, Gliederungszeichen und andere Symbole</msg>
+  <msg key="wordformsDesc">Wortformen umfassen alle unterschiedlichen Wörter im Corpus (d.h. identische Wörter zählen als eine Wortform)</msg>
   
   <msg key="corpusStats">Zahlen zum Corpus</msg>
+  <msg key="editInterv">Editorische Eingriffe</msg>
+  <msg key="editAbbr">Aufgelöste Abkürzungen</msg>
+  <msg key="editSic">Korrigierte Druckfehler</msg>
   
   
   <msg key="latin">Latein</msg>
