--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -172,12 +172,15 @@
   <msg key="wordformsDesc">Wortformen umfassen alle unterschiedlichen Wörter im Corpus (z.B. zählen zwei identische Wörter als eine Wortform)</msg>
   
   <msg key="corpusStats">Corpus-Statistiken</msg>
+  <msg key="statsFor">Statistiken für</msg>
+  <msg key="forLemma">für Lemma</msg>
   <msg key="generalStats">Allgemeine Daten</msg>
-  <msg key="freqCooc">Frequenzen und Kookurrenzen der häufigsten Lemmata</msg>
-  <msg key="cooccurrences">Kookurrenzen</msg>
+  <msg key="freqCooc">Frequenzen und Kookkurrenzen der häufigsten Lemmata</msg>
+  <msg key="cooccurrences">Kookkurrenzen</msg>
   <msg key="editInterv">Editorische Eingriffe</msg>
   <msg key="editAbbr">Aufgelöste Abkürzungen</msg>
   <msg key="editSic">Korrigierte Druckfehler</msg>
+  <msg key="editHyph">Auflösungen unmarkierter Worttrennungen</msg>
   
   <msg key="lemmas">Lemmata</msg>
   <msg key="numOcc">Anzahl der Vorkommen</msg>
@@ -268,6 +271,7 @@
   <msg key="inLow">in</msg>
   <msg key="editedByAbbrLow">hg. von</msg>
   <msg key="copy">Kopieren</msg>
+  <msg key="inLow">in</msg>
   
   <!-- div, milestone, element types for node index derivatives -->
   <msg key="tei-div-additional">Addendum</msg>
